buildscript {
  repositories {
    jcenter()
  }
}

plugins {
  id 'java'
  id 'org.owasp.dependencycheck' version '6.1.5' apply true
}

allprojects {
  sourceCompatibility = '11'
  targetCompatibility = '11'
}

repositories {
  jcenter()
}

dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
  analyzers {
  // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }
  analyzedTypes = ['jar']
  scanConfigurations = ['runtimeClasspath']
}
